[project]
name = "sam3-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "gradio==6.6.0",
    "imageio[pyav]>=2.37.3",
    "kernels>=0.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "sentencepiece>=0.2.1",
    "spaces>=0.50.2",
    "torch==2.11.0",
    "torchvision>=0.26.0",
    "transformers==5.9.0",
]
